--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,23 @@
-asgiref
-crispy-bootstrap5
-Django
-django-crispy-forms
-django-email
-django-environ
-MouseInfo
-numpy
-opencv-contrib-python
-pillow
-psycopg2
-PyAutoGUI
-PyGetWindow
-PyMsgBox
-pyperclip
-PyRect
-PyScreeze
-pytweening
-sqlparse
-tzdata
+asgiref==3.8.1
+crispy-bootstrap5==2024.2
+dj-database-url==2.3.0
+Django==5.0.6
+django-crispy-forms==2.2
+django-email==0.1.10
+django-environ==0.12.0
+MouseInfo==0.1.3
+numpy==1.26.4
+opencv-contrib-python==4.9.0.80
+pillow==11.0.0
+psycopg2==2.9.10
+psycopg2-binary==2.9.10
+PyAutoGUI==0.9.54
+PyGetWindow==0.0.9
+PyMsgBox==1.0.9
+pyperclip==1.8.2
+PyRect==0.2.0
+PyScreeze==0.1.30
+pytweening==1.2.0
+sqlparse==0.5.0
+typing_extensions==4.12.2
+tzdata==2024.1
